# ai-thesis-reviewer

./: .gitignore  README.md  pyproject.toml
src/ai_thesis_reviewer/: __main__.py  chunkers.py  config.py  llm.py  main.py  readers.py  utils.py
